--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
         <div class="post-wrapper">
            <h1>{{page.title}}</h1>
            <aside>
-               <p class="date">{{page.date | timeago}}</p>
+               <p class="date">{{page.date | date: date_to_string}}</p>
                <p class="metadata">{{page.focal}} | &fnof;{{ page.fstop }} | {{ page.iso }} | {{ page.shutterspeed }}</p>
            </aside>
            <img alt="page.alt" src="{{site.url}}/img/{{page.image}}.jpg"/>
